[update] fixed overflow to fit on other browsers

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
         padding: 0;        
         display: flex;
         flex-direction: column;
-        overflow-x: hidden;
+        overflow-x: clip;
     }
 
     .repo-info {
